updated with rebranded logo

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -10,5 +10,5 @@
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: base }}">
   <link rel="canonical" href="{{ page.url | replace:'index.php','' | prepend: base }}">
 
-  <link rel="shortcut icon" href="{{ "/images/logos/qlik-icon-16.ico" | prepend: base }}"  />
+  <link rel="shortcut icon" href="{{ "/images/logos/qlik-icon.png" | prepend: base }}"  />
 </head>
